Trying to format simulations and ReadMe

--- a/README.Rmd
+++ b/README.Rmd
@@ -13,10 +13,14 @@ knitr::opts_chunk$set(
 ```
 
 Extended documentation can be found on the website: https://LynetteCaitlin.github.io/oHMMed/  
+(Website is still work in progress!)
 
 ## 1. Overview
 
 The `oHMMed` package contains an implementation of Hidden Markov Models with ordered hidden states and emission densities. More precisely: We assume a sequence of un-observable (’hidden’) variables with discrete categories known as states. Moving along this sequence, the probability of a specific state occurring at any step depends only on the state preceding it. Each hidden variable along the sequence produces/’emits’ an observable data point. We assume that these emitted data points are distributed according to some continuous distribution (currently: normal or gamma-poisson compound) with state-specific parameters. Further, we assume that the continuous emission distributions per state are parameterised so that they can be ordered by increasing mean. In fact, transitions between states in the hidden sequence can only occur between states that emit densities that are neighbours in the ordering by mean. Given the observed data sequence, our models assign each part of the hidden sequence to a state, and infer the transition rates between them as well as the parameters of the state-specific emission distributions. This is the general framework of `oHMMed` (ordered Hidden Markov Model with emission densities), and it can be applied to any system that fulfills these assumptions.
+
+Mathematical details and graphical representations of the algorihms can be found in the following article:
+(...tba...)
 
 
 ## 2. Installation
@@ -38,8 +42,20 @@ devtools::install_github("LynetteCaitlin/oHMMed")
 
 ## 3. Usage
 
-## 3.1 Normal Model
+Please read the following usage recommendations: https://github.com/LynetteCaitlin/oHMMed/UsageRecommendations.pdf
 
-## 3.2 Poisson Model
+The accompanying R scripts are, for the case of normal emission densities...:
+https://github.com/LynetteCaitlin/oHMMed/simulation_scripts/MCMC_normal_sims.R
 
+... and for gamma-poisson emission densities:
+https://github.com/LynetteCaitlin/oHMMed/simulation_scripts/MCMC_poisson_sims.R
+ 
+Template code viewing the results of two different sequence annotations side-by-side and assessing associations between the two observed sequences can be found at:
+https://github.com/LynetteCaitlin/oHMMed/simulation_scripts/StandardOutputPlots.R
+
+## 4. Package Maintainers
+
+Michal Majka
+
+Lynette Caitlin Mikula
 
