Uploading Usage Recommendationa

--- a/README.Rmd
+++ b/README.Rmd
@@ -55,7 +55,7 @@ https://github.com/LynetteCaitlin/oHMMed/simulation_scripts/StandardOutputPlots.
 
 ## 4. Package Maintainers
 
-Michal Majka
+Michal Majka (R technicalities and technical algorithm improvement)
 
-Lynette Caitlin Mikula
+Lynette Caitlin Mikula (Algorithm development, usage, and application)
 
