--- a/INDEX.Rmd
+++ b/INDEX.Rmd
@@ -26,7 +26,7 @@ The `oHMMed` package contains an implementation of Hidden Markov Models with ord
 <!-- # install.packages("oHMMed") -->
 
 <!-- # Or the the development version from GitHub: -->
-<!-- devtools::install_github("majkamichal/oHMMed") -->
+<!-- devtools::install_github("LynetteCaitlin/oHMMed") -->
 <!-- ``` -->
 
 The `oHMMed` package is currently in development and it can be installed from `github` repository by simply executing in the console the following line:
@@ -34,4 +34,9 @@ The `oHMMed` package is currently in development and it can be installed from `g
 ```{r, eval = FALSE}
 devtools::install_github("LynetteCaitlin/oHMMed")
 ```
+
+
+## 3. Usage Recommendations
+
+Usage recommendations can be found in [this file](https://github.com/LynetteCaitlin/oHMMed/blob/main/UsageRecommendations.pdf).
 
