--- a/vignettes/oHMMed.Rmd
+++ b/vignettes/oHMMed.Rmd
@@ -21,6 +21,7 @@ knitr::opts_chunk$set(
 ```
 
 ```{r data_normal, cache=TRUE}
+
 N <- 2^10
 true_T <- rbind(c(0.95, 0.05, 0),
                c(0.025, 0.95, 0.025),
@@ -47,6 +48,11 @@ prior_means <- c(-7, -1, 12)
 prior_sd <- 3
 
 # Run MCMC
+iter <- 1500          
+warmup <- floor(iter * 0.4)
+print_params <- FALSE     
+verbose <- TRUE
+
 res_normal <- hmm_mcmc_normal(data = simdata,
                               prior_T = prior_T,
                               prior_means = prior_means,
@@ -64,3 +70,78 @@ summary_res_normal <- summary(res_normal)
 ```{r diagnostics_normal, cache=TRUE, message=FALSE}
 plot(res_normal)
 ```
+
+
+## 2) Gamma-Poisson model
+
+```{r data, warning=FALSE, cache=TRUE, include=FALSE}
+library(oHMMed)
+```
+
+### 2.1) Example data
+
+```{r, echo = FALSE}
+knitr::opts_chunk$set(
+    collapse = TRUE,
+    comment = "#>",
+    fig.path = "vignettes"
+)
+```
+
+```{r data_poisson, cache=TRUE}
+
+L1 <- 2^13  
+true_T1 <- rbind(c(0.99, 0.01, 0),
+                 c(0.01, 0.98, 0.01),
+                 c(0.0, 0.01, 0.99))
+
+true_betas1 <- 1 / (c(0.2, 1.5, 9)) 
+true_alpha1 <- 1.3                  
+
+simdata1full <- hmm_simulate_gamma_poisson_data(L = L1,
+                                                mat_T = true_T1,
+                                                betas = true_betas1,
+                                                alpha = true_alpha1)
+
+simdata1 <- simdata1full$data
+hist(simdata1, breaks = 50, main = "")
+
+```
+
+### 2.2) MCMC Simulation
+
+```{r simulation_gamma_poisson, cache=TRUE}
+iter <- 1500              
+warmup <- floor(iter * 0.4)
+print_params <- FALSE     
+verbose <- TRUE           
+
+n3_states_inferred <- 3
+prior3_T <- generate_random_T(n3_states_inferred)
+prior_alpha3 <- (mean(simdata1)^2) / ((var(simdata1) - mean(simdata1)) / 3) 
+
+prior_betas3 <- c(5,3,1)
+
+res_gamma_poisson <- hmm_mcmc_gamma_poisson(data = simdata1,
+                                                         prior_T = prior3_T,
+                                                         prior_betas = prior_betas3,
+                                                         prior_alpha = prior_alpha3,
+                                                         iter = iter,
+                                                         warmup = warmup,
+                                                         print_params = print_params,
+                                                         verbose = verbose)
+
+res_gamma_poisson
+
+summary_res_gamma_poisson <- summary(gamma_poisson)
+```
+
+### 2.3) Diagnostics
+
+```{r diagnostics_normal, cache=TRUE, message=FALSE}
+plot(res_gamma_poisson)
+```
+
+
+
+
