--- a/README.Rmd
+++ b/README.Rmd
@@ -52,9 +52,9 @@ https://github.com/LynetteCaitlin/oHMMed/blob/main/simulation_scripts/MCMC_norma
 
 https://github.com/LynetteCaitlin/oHMMed/blob/main/simulation_scripts/MCMC_gamma-poisson_sims.R
  
-Template code viewing the results of two different sequence annotations side-by-side and assessing associations between the two observed sequences can be found at:
+Template code for viewing summaries of oHMMed diagnostocs, and for viewing the results of two different sequence annotations side-by-side and assessing associations/correlations between them can be found at:
 
-https://github.com/LynetteCaitlin/oHMMed/blob/main/simulation_scripts/StandardOutputPlots.R
+https://github.com/LynetteCaitlin/oHMMed/blob/main/simulation_scripts/oHMMedOutputAnalyses.R
 
 ## 4. Package Authors
 
