--- a/README.Rmd
+++ b/README.Rmd
@@ -48,15 +48,13 @@ devtools::install_github("LynetteCaitlin/oHMMed")
 
 Please read the following usage recommendations: https://github.com/LynetteCaitlin/oHMMed/blob/main/UsageRecommendations.pdf
 
-The accompanying R scripts are, for the case of normal emission densities...:
+The accompanying R scripts are: 
 
-https://github.com/LynetteCaitlin/oHMMed/blob/main/simulation_scripts/MCMC_normal_sims.R
+- for the case of normal emission densities: https://github.com/LynetteCaitlin/oHMMed/blob/main/simulation_scripts/MCMC_normal_sims.R
 
-... and for gamma-poisson emission densities:
-
-https://github.com/LynetteCaitlin/oHMMed/blob/main/simulation_scripts/MCMC_gamma-poisson_sims.R
+- and for gamma-poisson emission densities: https://github.com/LynetteCaitlin/oHMMed/blob/main/simulation_scripts/MCMC_gamma-poisson_sims.R
  
-Template code for viewing summaries of oHMMed diagnostocs, and for viewing the results of two different sequence annotations side-by-side and assessing associations/correlations between them can be found at:
+Template code for viewing summaries of `oHMMed` diagnostics, and for viewing the results of two different sequence annotations side-by-side and assessing associations/correlations between them can be found at:
 
 https://github.com/LynetteCaitlin/oHMMed/blob/main/simulation_scripts/oHMMedOutputAnalyses.R
 
