--- a/INDEX.Rmd
+++ b/INDEX.Rmd
@@ -12,7 +12,12 @@ knitr::opts_chunk$set(
 )
 ```
 
-<br>
+
+[![CRAN_Status_Badge](http://www.r-pkg.org/badges/version/oHMMed)](https://cran.r-project.org/package=oHMMed)
+[![](http://cranlogs.r-pkg.org/badges/oHMMed)](http://cran.rstudio.com/web/packages/oHMMed /index.html)
+[![](https://cranlogs.r-pkg.org/badges/grand-total/oHMMed)](http://cran.rstudio.com/web/packages/oHMMed /index.html)
+
+
 
 ## 1. Overview
 
@@ -22,17 +27,14 @@ The `oHMMed` package contains an implementation of Hidden Markov Models with ord
 
 ## 2. Installation
 
-<!-- Just like many other `R` packages, `oHMMed` can be installed from the `CRAN` repository by simply executing in the console the following line: -->
+You can install latest stable cran version using (recommended):
 
-<!-- ```{r, eval = FALSE} -->
-<!-- # install.packages("oHMMed") -->
+```{r, eval = FALSE}
+install.packages("oHMMed")
+```
 
-<!-- # Or the the development version from GitHub: -->
-<!-- devtools::install_github("LynetteCaitlin/oHMMed") -->
-<!-- ``` -->
+Or the the development version from GitHub:
 
-The `oHMMed` package is currently in development and it can be installed from `github` repository by simply executing in the console the following line:
-    
 ```{r, eval = FALSE}
 devtools::install_github("LynetteCaitlin/oHMMed")
 ```
