--- a/README.Rmd
+++ b/README.Rmd
@@ -35,15 +35,23 @@ https://github.com/LynetteCaitlin/oHMMed/blob/main/Data/GenomeAnnotations.zip
 
 ## 2. Installation
 
-You can install latest stable cran version using (recommended):
+You can install the latest stable [cran](https://cran.r-project.org/web/packages/oHMMed/index.html) version using (recommended):
 
 ```{r, eval = FALSE}
 install.packages("oHMMed")
 ```
 
-Or the the development version from GitHub:
+In order to install the latest stable development version from GitHub you can use:
 
 ```{r, eval = FALSE}
+# install.packages("devtools")
+devtools::install_github("LynetteCaitlin/oHMMed@*release")
+```
+
+The development version can be installed using:
+
+```{r, eval = FALSE}
+# install.packages("devtools")
 devtools::install_github("LynetteCaitlin/oHMMed")
 ```
 
