--- a/INDEX.Rmd
+++ b/INDEX.Rmd
@@ -17,7 +17,9 @@ knitr::opts_chunk$set(
 [![](http://cranlogs.r-pkg.org/badges/oHMMed)](http://cran.rstudio.com/web/packages/oHMMed /index.html)
 [![](https://cranlogs.r-pkg.org/badges/grand-total/oHMMed)](http://cran.rstudio.com/web/packages/oHMMed /index.html)
 
+<br>
 
+# oHMMed
 
 ## 1. Overview
 
